// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefinePatterns.svelte > should be empty when patterns are not provided. 1`] = `
<body>
  <div>
    
  </div>
</body>
`;

exports[`DefinePatterns.svelte > should render error when pattern names are not unique 1`] = `
<body>
  <div>
    <error>
      Patterns should be an array and should have unique names for each pattern
    </error>
    
  </div>
</body>
`;

exports[`DefinePatterns.svelte > should render the patterns using fills and colors when provided 1`] = `
<body>
  <div>
    <error>
      Patterns should be an array and should have unique names for each pattern
    </error>
    
  </div>
</body>
`;

exports[`DefinePatterns.svelte > should render the patterns when provided 1`] = `
<body>
  <div>
    <error>
      Patterns should be an array and should have unique names for each pattern
    </error>
    
  </div>
</body>
`;
